Update Log Config
Update Async Email